add exercices links :memo:

--- a/f. Anaconda/Cours/10. Introduction à Matplotlib.md
+++ b/f. Anaconda/Cours/10. Introduction à Matplotlib.md
@@ -146,3 +146,7 @@ Matplotlib offre de nombreuses options de personnalisation pour ajuster l'appare
 - **Grille** :
   - Vous pouvez ajouter une grille pour faciliter la lecture du graphique.
   - Exemple : `plt.grid(True)`.
+
+
+<br>
+[[10. Exercices sur Matplotlib]]
