--- a/f. Anaconda/Cours/11. Visualisation des données.md
+++ b/f. Anaconda/Cours/11. Visualisation des données.md
@@ -29,3 +29,7 @@ presidents_americains['Political party'].plot(kind='pie',title='Partis politique
 
 plt.show()
 ```
+
+
+<br>
+[[11. Graphiques avec Matplotlib et Pandas]]
