--- a/f. Anaconda/Cours/2. Conda et minoconda.md
+++ b/f. Anaconda/Cours/2. Conda et minoconda.md
@@ -73,4 +73,4 @@ Grâce à ce channel que l'on a ajouté, on va pouvoir revenir aux commandes d'a
 
 <br>
 
-[Exercice](cours/Exercices/Environnements%20anaconda.md)
+[[2. Création Environnements Virtuels avec Anaconda]]
