--- a/f. Anaconda/Cours/6. Sélection des données.md
+++ b/f. Anaconda/Cours/6. Sélection des données.md
@@ -133,3 +133,4 @@ print(notes.iloc[1])
 `notes.iloc[1]` sélectionne la ligne dont `l’indice positionnel` est 1, c’est-à-dire `"Sylvain"`.
 
 <br>
+[[6. Sélection de Données avec Pandas]]
