Corrections et exercices modifiés :sparkles:

--- a/f. Anaconda/Cours/7. Les opérations de statistique.md
+++ b/f. Anaconda/Cours/7. Les opérations de statistique.md
@@ -67,4 +67,4 @@ print(df_notes.describe());
 
 <br>
 
-[[7. Analyse Statistique avec Pandas]]
+[[f. Anaconda/Exercices/7. Analyse Statistique avec Pandas]]
