--- a/f. Anaconda/Cours/8. Les opérations de filtrage, groupage et de concaténation.md
+++ b/f. Anaconda/Cours/8. Les opérations de filtrage, groupage et de concaténation.md
@@ -134,4 +134,4 @@ print("\nRésultat de la concaténation:\n", df_concat)
 
 <br>
 
-[[8. Opérations Avancées avec Pandas]]
+[[f. Anaconda/Exercices/8. Opérations Avancées avec Pandas]]
