--- a/f. Anaconda/Cours/9. Lire les fichiers avec PANDAS.md
+++ b/f. Anaconda/Cours/9. Lire les fichiers avec PANDAS.md
@@ -81,4 +81,4 @@ print(data_Etudiants)
 
 <br>
 
-[[9. Lecture de Fichiers avec Pandas]]
+[[f. Anaconda/Exercices/9. Lecture de Fichiers avec Pandas]]
