--- a/f. Anaconda/Exercices/10. Exercices sur Matplotlib.md
+++ b/f. Anaconda/Exercices/10. Exercices sur Matplotlib.md
@@ -51,10 +51,6 @@ Créez un graphique en nuage de points représentant la relation entre la tempé
 
 Créez un graphique en boîte pour visualiser la distribution des scores obtenus par des étudiants dans différentes matières. Utilisez des données fictives.
 
+
 <br>
-
-### Exercice 6: Personnalisation Avancée
-
----
-
-Choisissez l'un des graphiques créés précédemment et appliquez des personnalisations avancées, telles que le style de ligne, la transparence, etc.
+[[f. Anaconda/Exercices/Corrections/10. Exercices sur Matplotlib]]
