--- a/f. Anaconda/Exercices/11. Graphiques avec Matplotlib et Pandas.md
+++ b/f. Anaconda/Exercices/11. Graphiques avec Matplotlib et Pandas.md
@@ -1,54 +1,78 @@
-### Exercice 1: Graphique à Secteurs (Pie Chart)
+### Exercice 1: Évolution de la Population Mondiale (Ligne Temporelle)
 
----
+Utilisez les données réelles de la population mondiale au fil des années pour créer une ligne temporelle.
 
-Utilisez les données sur les présidents américains pour créer un graphique à secteurs (pie chart) montrant le pourcentage des différents partis politiques ayant occupé la Maison Blanche.
-
-**Instructions:**
-1. Utilisez le code fourni pour lire les données sur les présidents américains depuis le fichier "Presidents.xlsx".
-2. Créez un graphique à secteurs (pie chart) pour représenter le pourcentage des différents partis politiques. Utilisez la colonne "Political party" pour cela.
-3. Ajoutez un titre approprié au graphique.
-4. Affichez le graphique.
-
-<br>
-
-### Exercice 2: Graphique à Barres (Bar Chart)
-
----
-
-Créez un graphique à barres montrant le nombre de présidents provenant de chaque État.
+**Données:**
+```plaintext
+| Année | Population mondiale (milliards) |
+|-------|---------------------------------|
+| 1950  | 2.5                             |
+| 1960  | 3.0                             |
+| 1970  | 3.7                             |
+| 1980  | 4.4                             |
+| 1990  | 5.3                             |
+| 2000  | 6.1                             |
+| 2010  | 7.0                             |
+| 2020  | 7.8                             |
+```
 
 **Instructions:**
-1. Utilisez les données sur les présidents américains.
-2. Créez un graphique à barres pour représenter le nombre de présidents par État. Utilisez la colonne "state elected from" pour cela.
+1. Utilisez les données fournies pour créer une ligne temporelle illustrant l'évolution de la population mondiale au fil des ans.
+2. Ajoutez un titre à la ligne temporelle et des labels aux axes.
+3. Affichez la ligne temporelle.
+
+### Exercice 2: Répartition de la Population par Continent (Diagramme à Barres)
+
+Utilisez des données fictives sur la répartition de la population mondiale par continent.
+
+**Données fictives:**
+```plaintext
+| Continent   | Population (%) |
+|-------------|-----------------|
+| Asie        | 60              |
+| Afrique     | 15              |
+| Amérique    | 15              |
+| Europe      | 8               |
+| Océanie     | 2               |
+```
+
+**Instructions:**
+1. Créez un graphique à barres pour représenter la répartition de la population mondiale par continent en utilisant les données fictives fournies.
+2. Utilisez différentes couleurs pour chaque continent.
 3. Ajoutez un titre approprié et des labels aux axes.
 4. Affichez le graphique.
 
-<br>
+### Exercice 3: Pyramide des Âges (Diagramme à Barres)
 
-### Exercice 3: Graphique en Nuage de Points (Scatter Plot)
+Imaginez des données sur la pyramide des âges d'un pays spécifique. Créez un diagramme à barres pour illustrer la répartition de la population par groupes d'âge.
 
----
-
-Créez un graphique en nuage de points (scatter plot) montrant la relation entre l'âge à l'inauguration et la popularité (rating points) des présidents.
-
-**Instructions:**
-1. Utilisez les données sur les présidents américains.
-2. Créez un graphique en nuage de points pour représenter la relation entre l'âge à l'inauguration (colonne "age at inauguration") et la popularité (colonne "rating points").
-3. Ajoutez un titre approprié et des labels aux axes.
-4. Affichez le graphique.
-
-<br>
-
-### Exercice 4: Graphique à Secteurs Personnalisé
-
----
-
-Créez un graphique à secteurs (pie chart) en utilisant un style personnalisé avec des couleurs spécifiques et en faisant ressortir une partie du graphique.
+**Données fictives:**
+```plaintext
+| Groupe d'âge | Pourcentage de la population |
+|--------------|------------------------------|
+| 0-14 ans     | 25                           |
+| 15-64 ans    | 65                           |
+| 65 ans et +  | 10                           |
+```
 
 **Instructions:**
-1. Utilisez les données sur les présidents américains.
-2. Créez un graphique à secteurs en utilisant la colonne "Political party".
-3. Personnalisez le style du graphique en utilisant des couleurs spécifiques pour chaque parti politique (vous pouvez utiliser la liste de couleurs fournie dans le code initial).
-4. Faites ressortir une partie du graphique en utilisant l'attribut "explode" pour la section correspondant à un parti politique spécifique.
-5. Ajoutez un titre approprié et affichez le graphique.
+1. Utilisez les données fictives pour la répartition de la population par groupes d'âge.
+2. Créez un diagramme à barres pour représenter cette pyramide des âges.
+3. Ajoutez un titre et des labels aux axes.
+4. Affichez le diagramme à barres.
+
+### Exercice 4: Carte de la Population Mondiale (OPTIONNEL)
+
+Créez une carte représentant la densité de population mondiale par pays.
+
+**Données fictives:**
+Vous pouvez utiliser des données réelles de densité de population par pays provenant de sources telles que les Nations Unies ou la Banque mondiale.
+
+**Instructions:**
+1. Créez une carte du monde en utilisant différentes couleurs pour indiquer la densité de population par pays.
+2. Ajoutez une légende pour expliquer les couleurs.
+3. Affichez la carte.
+
+
+<br>
+[[f. Anaconda/Exercices/Corrections/11. Graphiques avec Matplotlib et Pandas]]
