--- a/f. Anaconda/Exercices/4. Création d'Objets Series avec Pandas.md
+++ b/f. Anaconda/Exercices/4. Création d'Objets Series avec Pandas.md
@@ -4,18 +4,19 @@
 
 Considérez la situation où vous avez les notes d'étudiants pour différentes matières. Utilisez la création d'une série à partir d'un dictionnaire pour représenter ces notes.
 
-1. **Création du Dictionnaire :**
-   - Créez un dictionnaire `notes` avec les matières comme clés et les notes correspondantes comme valeurs.
-   - **Affichez le dictionnaire créé.**
+On considère le dictionnaire comme ceci :
+```python
+notes = {'Mathématiques': 18, 'Sciences Physiques': 15, 'Français': 12, 'Biologie': 16}
+```
 
-2. **Création de la Série :**
+1. **Création de la Série :**
    - Utilisez le dictionnaire pour créer une série `ser`.
    - **Affichez la série ainsi que son index.**
 
-3. **Accès à une Note :**
+2. **Accès à une Note :**
    - Affichez la note obtenue en Mathématiques en utilisant l'index.
 
-4. **Vérification de la Présence d'une Matière :**
+3. **Vérification de la Présence d'une Matière :**
    - Vérifiez si la matière "Sciences Physiques" est présente dans l'index de la série et notez le résultat dans une phrase.
 
 <br>
@@ -26,24 +27,29 @@ Considérez la situation où vous avez les notes d'étudiants pour différentes 
 
 Modifiez l'exercice précédent en ajoutant un index personnalisé à la série.
 
-1. **Création de la Série avec un Index Personnalisé :**
+**Création de la Série avec un Index Personnalisé :**
    - Utilisez le dictionnaire `notes` pour créer une série `ser` avec un index personnalisé contenant les matières et une matière supplémentaire "Sciences Physiques".
    - **Affichez la série résultante.**
 
 <br>
 
-### Exercice 3: Création d'une Série à partir d'un ndarray
+### Exercice 3: Création d'une Série à partir d'un tableau
 
 ---
 
-Imaginons que vous ayez des données sur la population de différents pays. Utilisez la création d'une série à partir d'un ndarray pour représenter ces données.
+Imaginons que vous ayez des données sur la population de différents pays. Utilisez la création d'une série à partir d'un tableau pour représenter ces données.
 
-1. **Création du ndarray :**
-   - Créez un ndarray `populations` avec des valeurs numériques représentant la population de différents pays.
-   - **Affichez le ndarray créé.**
+1. **Création du tableau :**
+   - Créez un tableau `populations` avec des valeurs numériques représentant la population de différents pays.
+   - **Affichez le tableau créé.**
+
+exemple avec numpy  et ndarray :
+```python
+populations = np.array([8000000, 1200000000, 67000000, 1260000000])
+```
 
 2. **Création de la Série :**
-   - Utilisez le ndarray pour créer une série `ser` avec les noms des pays comme index.
+   - Utilisez le tableau pour créer une série `ser` avec les noms des pays comme index.
    - **Affichez la série résultante.**
 
 <br>
@@ -54,7 +60,7 @@ Imaginons que vous ayez des données sur la population de différents pays. Util
 
 Dans cet exercice, vous avez une valeur scalaire représentant une constante. Utilisez cette valeur pour créer une série avec un index spécifié.
 
-1. **Création de la Série avec Valeur Scalaire :**
+**Création de la Série avec Valeur Scalaire :**
    - Utilisez une valeur scalaire (par exemple, 5.0) pour créer une série `ser` avec un index personnalisé (par exemple, ["a", "b", "c", "d"]).
    - **Affichez la série résultante.**
 
@@ -72,3 +78,6 @@ Nommez une série pour lui donner une signification particulière.
 2. **Attribution du Nom :**
    - Utilisez l'attribut `name` pour attribuer le nom "Série de Mesures" à la série.
    - **Affichez la série résultante avec son nouveau nom.**
+
+<br>
+[[f. Anaconda/Exercices/Corrections/4. Création d'Objets Series avec Pandas]]
