--- a/f. Anaconda/Exercices/5. Création de Dataframes avec Pandas.md
+++ b/f. Anaconda/Exercices/5. Création de Dataframes avec Pandas.md
@@ -4,7 +4,7 @@
 
 Considérez le cas où vous avez des notes d'étudiants pour différentes matières stockées dans des objets Series. Utilisez la création d'une Dataframe à partir d'un dictionnaire de séries pour organiser ces données.
 
-1. Créez deux objets Series, l'un pour les notes en "Mathématiques" et l'autre pour les notes en "Sciences Physiques".
+1. Créez deux objets Series, l'un pour les notes en "Mathématiques" et l'autre pour les notes en "Sciences Physiques". Exemple : `notes_math = {'Alice': 18, 'Bob': 15, 'Charlie': 12}`, `notes_sciences = {'Alice': 16, 'Bob': 14, 'Charlie': 17}`.
 2. Utilisez ces objets Series pour créer un dictionnaire `notes`.
 3. Utilisez le dictionnaire pour créer une Dataframe `df` avec les noms des étudiants comme index.
 4. Affichez la Dataframe résultante.
@@ -28,7 +28,7 @@ En utilisant la Dataframe créée dans l'exercice précédent, explorez les éti
 
 Imaginez que vous ayez des informations sur les prénoms et les âges de personnes. Utilisez la création d'une Dataframe à partir d'un dictionnaire de ndarray ou de liste pour représenter ces données.
 
-1. Créez un dictionnaire `data` avec les clés "Prenom" et "Age", contenant des listes de prénoms et d'âges.
+1. Créez un dictionnaire `data` avec les clés "Prenom" et "Age", contenant des listes de prénoms et d'âges. Exemple : `data = {'Prenom': ['Alice', 'Bob', 'Charlie'], 'Age': [25, 30, 22]}`
 2. Utilisez le dictionnaire pour créer une Dataframe `df`.
 3. Affichez la Dataframe résultante.
 
@@ -43,3 +43,7 @@ En utilisant la Dataframe créée dans l'exercice précédent, explorez ses cara
 1. Affichez la Dataframe.
 2. Utilisez la méthode `info()` pour afficher des informations sur la structure de la Dataframe.
 3. Utilisez la méthode `describe()` pour obtenir des statistiques descriptives sur les données.
+
+
+<br>
+[[f. Anaconda/Exercices/Corrections/5. Création de Dataframes avec Pandas]]
