--- a/f. Anaconda/Exercices/7. Analyse Statistique avec Pandas.md
+++ b/f. Anaconda/Exercices/7. Analyse Statistique avec Pandas.md
@@ -1,4 +1,14 @@
-Considérez le DataFrame `df_notes` représentant les notes obtenues par des élèves dans différentes formations. Utilisez les méthodes d'agrégation suivantes pour extraire des informations statistiques pertinentes.
+Considérez le DataFrame `df_notes` représentant les notes obtenues par des élèves dans différentes formations. Utilisez les méthodes d'agrégation suivantes pour extraire des informations statistiques pertinentes. Exemple : 
+```python
+data = {
+    'Formation': ['Mathématiques', 'Physique', 'Français', 'Mathématiques', 'Physique'],
+    'Étudiant': ['Alice', 'Bob', 'Charlie', 'David', 'Eva'],
+    'Note': [85, 92, 78, 95, 88]
+}
+
+df_notes = pd.DataFrame(data)
+df_notes.set_index(['Formation', 'Étudiant'], inplace=True)
+```
 
 1. **Somme des notes par étudiant :**
    Utilisez la méthode `.sum()` pour calculer la somme des notes obtenues par chaque étudiant dans l'ensemble des formations.
@@ -11,3 +21,7 @@ Considérez le DataFrame `df_notes` représentant les notes obtenues par des él
 
 4. **Résumé statistique global :**
    Utilisez la méthode `.describe()` pour obtenir un résumé statistique global du DataFrame, fournissant des informations telles que la moyenne, l'écart-type, la médiane, les valeurs minimales et maximales, etc.
+
+<br>
+
+[[f. Anaconda/Exercices/Corrections/7. Analyse Statistique avec Pandas]]
