--- a/f. Anaconda/Exercices/Corrections/8. Opérations Avancées avec Pandas.md
+++ b/f. Anaconda/Exercices/Corrections/8. Opérations Avancées avec Pandas.md
@@ -16,7 +16,12 @@ df_notes = pd.DataFrame({
 
 # Effectuez les opérations de filtrage suivantes:
 # 1. Sélectionnez les étudiants ayant obtenu une note supérieure ou égale à 18 en Physique.
+df_filtre_physique = df_notes[df_notes["Physique"] >= 18]
+print("1. Étudiants avec une note supérieure ou égale à 18 en Physique:\n", df_filtre_physique)
+
 # 2. Sélectionnez les étudiants ayant une note supérieure ou égale à 15 en Chimie et une note supérieure ou égale à 16 en Informatique.
+df_filtre_chimie_info = df_notes[(df_notes["Chimie"] >= 15) & (df_notes["Informatique"] >= 16)]
+print("\n2. Étudiants avec une note supérieure ou égale à 15 en Chimie et 16 en Informatique:\n", df_filtre_chimie_info)
 ```
 
 <br>
@@ -39,7 +44,12 @@ df_universites = pd.DataFrame(notes, columns=['Région', 'Université', 'Nom', '
 
 # Effectuez les opérations de groupage suivantes:
 # 1. Groupez les données par Région et affichez les groupes.
+df_group_by_region = df_universites.groupby('Région')
+print("1. Groupes par Région:\n", df_group_by_region.groups)
+
 # 2. Calculez la moyenne des notes en Chimie et Biologie pour chaque Université.
+df_moyenne_notes_universite = df_universites.groupby('Université').agg({'Biologie': 'mean', 'Chimie': 'mean'})
+print("\n2. Moyenne des notes en Chimie et Biologie pour chaque Université:\n", df_moyenne_notes_universite)
 ```
 
 <br>
@@ -59,9 +69,10 @@ df2 = pd.DataFrame({'Profession': ['Étudiant', 'Ingénieur'], 'Statut Matrimoni
 
 # Effectuez les opérations de concaténation suivantes:
 # 1. Concaténez les DataFrames verticalement.
+df_concat_vertical = pd.concat([df1, df2], axis=0)
+print("1. Concaténation verticale des DataFrames:\n", df_concat_vertical)
+
 # 2. Concaténez les DataFrames horizontalement.
+df_concat_horizontal = pd.concat([df1, df2], axis=1)
+print("\n2. Concaténation horizontale des DataFrames:\n", df_concat_horizontal)
 ```
-
-<br>
-
-[[f. Anaconda/Exercices/Corrections/8. Opérations Avancées avec Pandas]]
