--- a/f. Anaconda/Exercices/Corrections/9. Lecture de Fichiers avec Pandas.md
+++ b/f. Anaconda/Exercices/Corrections/9. Lecture de Fichiers avec Pandas.md
@@ -13,8 +13,21 @@ Tablette,15,300
 ```
 
 1. Utilisez Pandas pour lire les données du fichier CSV et stockez-les dans un DataFrame appelé `df_produits`.
-2. Affichez le DataFrame `df_produits`.
-3. Utilisez la méthode `describe()` pour obtenir des statistiques sur les données.
+```python
+import pandas as pd
+
+# Lecture du fichier CSV
+df_produits = pd.read_csv("chemin/vers/le/fichier.csv")
+
+# Affichage du DataFrame
+print("1. DataFrame df_produits:\n", df_produits)
+```
+
+2. Utilisez la méthode `describe()` pour obtenir des statistiques sur les données.
+```python
+# Statistiques descriptives
+print("\n2. Statistiques descriptives du DataFrame df_produits:\n", df_produits.describe())
+```
 
 <br>
 
@@ -33,8 +46,19 @@ Considérez le fichier Excel suivant contenant des informations sur les employé
 | 5  | Eva      | Designer        | 37500   |
 
 1. Utilisez Pandas pour lire les données de la feuille Excel appelée "Employés" et stockez-les dans un DataFrame appelé `df_employes`.
-2. Affichez le DataFrame `df_employes`.
-3. Utilisez la méthode `describe()` pour obtenir des statistiques sur les données.
+```python
+# Lecture du fichier Excel
+df_employes = pd.read_excel("chemin/vers/le/fichier.xlsx", sheet_name="Employés")
+
+# Affichage du DataFrame
+print("1. DataFrame df_employes:\n", df_employes)
+```
+
+2. Utilisez la méthode `describe()` pour obtenir des statistiques sur les données.
+```python
+# Statistiques descriptives
+print("\n2. Statistiques descriptives du DataFrame df_employes:\n", df_employes.describe())
+```
 
 <br>
 
@@ -52,9 +76,22 @@ Considérez le fichier Excel suivant contenant des données sur les ventes et le
 | Ouest           | 600    | 350   |
 
 1. Utilisez Pandas pour lire les données de la feuille Excel appelée "Ventes_Couts" et stockez-les dans un DataFrame appelé `df_ventes_couts`.
-2. Affichez le DataFrame `df_ventes_couts`.
-3. Calculez la marge bénéficiaire (Ventes - Coûts) et ajoutez-la comme une nouvelle colonne au DataFrame.
-4. Affichez le DataFrame mis à jour.
+```python
+# Lecture du fichier Excel
+df_ventes_couts = pd.read_excel("chemin/vers/le/fichier.xlsx", sheet_name="Ventes_Couts")
 
-<br>
-[[f. Anaconda/Exercices/Corrections/9. Lecture de Fichiers avec Pandas]]
+# Affichage du DataFrame
+print("1. DataFrame df_ventes_couts:\n", df_ventes_couts)
+```
+
+2. Calculez la marge bénéficiaire (Ventes - Coûts) et ajoutez-la comme une nouvelle colonne au DataFrame.
+```python
+# Calcul de la marge bénéficiaire
+df_ventes_couts["Marge_Beneficiaire"] = df_ventes_couts["Ventes"] - df_ventes_couts["Coûts"]
+```
+
+3. Affichez le DataFrame mis à jour.
+```python
+# Affichage du DataFrame mis à jour
+print("\n3. DataFrame df_ventes_couts avec Marge_Beneficiaire:\n", df_ventes_couts)
+```
