--- a/f. Anaconda/Exercices/6. Sélection de Données avec Pandas.md
+++ b/f. Anaconda/Exercices/6. Sélection de Données avec Pandas.md
@@ -1,8 +1,8 @@
-## Exercice 1: Accès aux données d'une Series
+### Exercice 1: Accès aux données d'une Series
 
 ---
 
-Considérez une Series `ser` représentant les notes obtenues par un étudiant dans différentes matières.
+Considérez une Series `ser` représentant les notes obtenues par un étudiant dans différentes matières. Exemple : `ser = pd.Series([18, 15, 12, 16], index=['Mathématiques', 'Sciences Physiques', 'Français', 'Biologie'])`
 
 1. Affichez la note en "Mathématiques" en utilisant l'opérateur d'indexation.
 2. Affichez la note en "Français" en utilisant l'opérateur d'indexation par position.
@@ -12,11 +12,11 @@ Considérez une Series `ser` représentant les notes obtenues par un étudiant d
 
 <br>
 
-## Exercice 2: Utilisation des méthodes .loc() et .iloc()
+### Exercice 2: Utilisation des méthodes .loc() et .iloc()
 
 ---
 
-Considérez la Series `fleurs` représentant des noms de fleurs avec des indices explicites et positionnels.
+Considérez la Series `fleurs` représentant des noms de fleurs avec des indices explicites et positionnels. Exemple : `fleurs = pd.Series(['Rose', 'Tulipe', 'Lys', 'Dahlia'], index=['1', '2', '3', '4'])`
 
 1. Utilisez la méthode `.loc()` pour afficher la fleur avec l'indice explicite "1".
 2. Utilisez la méthode `.iloc()` pour afficher la fleur à la deuxième position.
@@ -25,11 +25,11 @@ Considérez la Series `fleurs` représentant des noms de fleurs avec des indices
 
 <br>
 
-## Exercice 3: Accès aux données d'un Dataframe
+### Exercice 3: Accès aux données d'un Dataframe
 
 ---
 
-Considérez un Dataframe `notes` représentant les notes de différents étudiants dans deux matières.
+Considérez un Dataframe `notes` représentant les notes de différents étudiants dans deux matières. Exemple : `notes = pd.DataFrame({'Mathématiques': [18, 15, 14], 'Sciences Physiques': [16, 12, 13]}, index=['Alice', 'Bob', 'Gilles'])`
 
 1. Affichez la colonne "Mathématiques" en utilisant l'opérateur d'indexation.
 2. Utilisez l'accès de type attributaire pour afficher la colonne "Sciences Physiques".
@@ -38,7 +38,7 @@ Considérez un Dataframe `notes` représentant les notes de différents étudian
 
 <br>
 
-## Exercice 4: Utilisation des méthodes .loc() et .iloc() avec un Dataframe
+### Exercice 4: Utilisation des méthodes .loc() et .iloc() avec un Dataframe
 
 ---
 
@@ -48,3 +48,8 @@ Considérez le même Dataframe `notes` que dans l'exercice précédent.
 2. Utilisez `.iloc()` pour afficher toutes les informations sur le deuxième étudiant.
 3. Utilisez `.loc()` pour afficher les notes de "Sylvain" dans les deux matières.
 4. Utilisez `.iloc()` pour afficher les notes du deuxième étudiant dans les deux matières.
+
+
+<br>
+
+[[f. Anaconda/Exercices/Corrections/6. Sélection de Données avec Pandas]]
