--- a/f. Anaconda/Exercices/6. Sélection de Données avec Pandas.md
+++ b/f. Anaconda/Exercices/6. Sélection de Données avec Pandas.md
@@ -2,7 +2,7 @@
 
 ---
 
-Considérez une Series `ser` représentant les notes obtenues par un étudiant dans différentes matières. Exemple : `ser = pd.Series([18, 15, 12, 16], index=['Mathématiques', 'Sciences Physiques', 'Français', 'Biologie'])`
+Considérez une Series `ser` représentant les notes obtenues par un étudiant dans différentes matières.
 
 1. Affichez la note en "Mathématiques" en utilisant l'opérateur d'indexation.
 2. Affichez la note en "Français" en utilisant l'opérateur d'indexation par position.
@@ -16,7 +16,7 @@ Considérez une Series `ser` représentant les notes obtenues par un étudiant d
 
 ---
 
-Considérez la Series `fleurs` représentant des noms de fleurs avec des indices explicites et positionnels. Exemple : `fleurs = pd.Series(['Rose', 'Tulipe', 'Lys', 'Dahlia'], index=['1', '2', '3', '4'])`
+Considérez la Series `fleurs` représentant des noms de fleurs avec des indices explicites et positionnels.
 
 1. Utilisez la méthode `.loc()` pour afficher la fleur avec l'indice explicite "1".
 2. Utilisez la méthode `.iloc()` pour afficher la fleur à la deuxième position.
