--- a/f. Anaconda/Cours/2. Conda et minoconda.md
+++ b/f. Anaconda/Cours/2. Conda et minoconda.md
@@ -32,6 +32,7 @@ Anaconda possède plusieurs avantages, tels que :
 Les environnements sont des éléments importants. Afin de ne pas avoir plusieurs PC différents, chacun spécialisé dans un domaine spécifique et qui nous encombrerait, Python a mis en place un système d'environnement virtuel afin d'éviter ces soucis et d'avoir des environnements spécialisés.
 
 ![[environment.png]]
+(academind)
 
 Avant toute chose, on va vérifier les environnements que l'on possède déjà grâce à `conda env list`, qui va tous les afficher. L'environnement que l'on utilise est marqué par un `*`.
 
@@ -54,6 +55,7 @@ Pour visualiser les channels, on va faire `conda config --show channels`.
 Pour télécharger un package, on fait : `conda install <package>`.
 
 ![[packages-reduit.png]]
+(academind)
 
 Sauf que le channel par défaut ne possède pas tous les packages, seulement les plus utilisés, alors on va devoir utiliser d'autres channels comme `conda-forge` afin de pouvoir les télécharger.
 
@@ -65,6 +67,7 @@ Pour ajouter un channel à la configuration : `conda config --add channels <chan
 Grâce à ce channel que l'on a ajouté, on va pouvoir revenir aux commandes d'avant comme `conda install <package>`.
 
 ![[packages.png]]
+(academind)
 
 > [!INFO] Priorité des Channels
 > Les channels ont un système de priorité, ce qui fait que l'environnement ne prend pas le package avec la dernière version, mais le package du channel avec la plus haute priorité.
