--- a/f. Anaconda/Cours/5. Dataframe.md
+++ b/f. Anaconda/Cours/5. Dataframe.md
@@ -38,7 +38,7 @@ notes = {
 	"Sciences Physiques": pd.Series([15.0, 7.0, 10.0,20.0],index=["Sylvie", "Gilles", "Sylvain", "Thomas"]),
 }
 
-df = pd.Dataframe(notes)
+df = pd.DataFrame(notes)
 
 print(df)
 ```
@@ -52,7 +52,7 @@ notes = {
 	"Mathématiques": pd.Series([18.0, 20.0, 17.0], index=["Sylvie", "Gilles", "Sylvain"]),
 	"Sciences Physiques": pd.Series([15.0, 7.0, 10.0,20.0],index=["Sylvie", "Gilles", "Sylvain", "Thomas"]),
 }
-df = pd.Dataframe(notes)
+df = pd.DataFrame(notes)
 
 print(df.index)
 print(df.columns)
