--- a/f. Anaconda/Exercices/4. Création d'Objets Series avec Pandas.md
+++ b/f. Anaconda/Exercices/4. Création d'Objets Series avec Pandas.md
@@ -28,7 +28,7 @@ notes = {'Mathématiques': 18, 'Sciences Physiques': 15, 'Français': 12, 'Biolo
 Modifiez l'exercice précédent en ajoutant un index personnalisé à la série.
 
 **Création de la Série avec un Index Personnalisé :**
-   - Utilisez le dictionnaire `notes` pour créer une série `ser` avec un index personnalisé contenant les matières et une matière supplémentaire "Sciences Physiques".
+   - Utilisez le dictionnaire `notes` pour créer une série `ser` avec un index personnalisé contenant les matières et une matière supplémentaire "Anglais".
    - **Affichez la série résultante.**
 
 <br>
