--- a/f. Anaconda/Exercices/Corrections/4. Création d'Objets Series avec Pandas.md
+++ b/f. Anaconda/Exercices/Corrections/4. Création d'Objets Series avec Pandas.md
@@ -19,7 +19,7 @@ else:
 # Exercice 2: Index Personnalisé pour une Série à partir d'un Dictionnaire
 
 # Création de la Série avec un Index Personnalisé
-index_personnalise = list(notes.keys()) + ['Sciences Humaines']
+index_personnalise = list(notes.keys()) + ['Anglais']
 ser_personnalise = pd.Series(notes, index=index_personnalise)
 print("\nSérie avec un Index Personnalisé :\n", ser_personnalise)
 
