--- a/f. Anaconda/Exercices/5. Création de Dataframes avec Pandas.md
+++ b/f. Anaconda/Exercices/5. Création de Dataframes avec Pandas.md
@@ -4,7 +4,7 @@
 
 Considérez le cas où vous avez des notes d'étudiants pour différentes matières stockées dans des objets Series. Utilisez la création d'une Dataframe à partir d'un dictionnaire de séries pour organiser ces données.
 
-1. Créez deux objets Series, l'un pour les notes en "Mathématiques" et l'autre pour les notes en "Sciences Physiques". Exemple : `notes_math = {'Alice': 18, 'Bob': 15, 'Charlie': 12}`, `notes_sciences = {'Alice': 16, 'Bob': 14, 'Charlie': 17}`.
+1. Créez deux objets Series, l'un pour les notes en "Mathématiques" et l'autre pour les notes en "Sciences Physiques".
 2. Utilisez ces objets Series pour créer un dictionnaire `notes`.
 3. Utilisez le dictionnaire pour créer une Dataframe `df` avec les noms des étudiants comme index.
 4. Affichez la Dataframe résultante.
