--- a/f. Anaconda/Exercices/5. Création de Dataframes avec Pandas.md
+++ b/f. Anaconda/Exercices/5. Création de Dataframes avec Pandas.md
@@ -28,7 +28,7 @@ En utilisant la Dataframe créée dans l'exercice précédent, explorez les éti
 
 Imaginez que vous ayez des informations sur les prénoms et les âges de personnes. Utilisez la création d'une Dataframe à partir d'un dictionnaire de ndarray ou de liste pour représenter ces données.
 
-1. Créez un dictionnaire `data` avec les clés "Prenom" et "Age", contenant des listes de prénoms et d'âges. Exemple : `data = {'Prenom': ['Alice', 'Bob', 'Charlie'], 'Age': [25, 30, 22]}`
+1. Créez un dictionnaire `data` avec les clés "Prenom" et "Age", contenant des listes de prénoms et d'âges.
 2. Utilisez le dictionnaire pour créer une Dataframe `df`.
 3. Affichez la Dataframe résultante.
 
