--- a/f. Anaconda/Cours/11. Visualisation des données.md
+++ b/f. Anaconda/Cours/11. Visualisation des données.md
@@ -1,5 +1,4 @@
-Pour la suite de cette section nous utiliserons les données suivantes représentant des informations
-sur les présidents américains.
+Pour la suite de cette section nous utiliserons les données suivantes représentant des information sur les présidents américains.
 
 |President|in office|year first inaugurated|age at inauguration|state elected from|electoral vote|popular votes|total Votes|rating points|Political party|occupation|college|elector|
 |---------|---------|----------------------|-------------------|------------------|--------------|-------------|-----------|-------------|---------------|----------|-------|-------|
@@ -13,8 +12,7 @@ sur les présidents américains.
 |Martin Van Buren|4.0|1837|54|New york|170|764176|1503534|294|429.0|Democrat|Lawyer|None|57.8231|
 |William Henry Harrison|0.8|1841|68|Ohio|234|1275390|2411808|294|329.0|Whig|Soldier|Hampden-Sydney|79.5918|
 
-Imaginons que nous voulons présenter sur un graphique le pourcentage des partis politiques ayant
-occupé la maison blanche.
+Imaginons que nous voulons présenter sur un graphique le pourcentage des partis politiques ayant occupé la maison blanche.
 
 Le code qui permet de réaliser un tel graphique est le suivant :
 
